Remove extra rtectd hook stages

--- a/assets/cluster-configs/rtetcd.yaml
+++ b/assets/cluster-configs/rtetcd.yaml
@@ -25,7 +25,7 @@ extraIgnitionInline: |
               "when": {
                 "commands": ["etcd"]
               },
-              "stages": ["prestart", "poststop", "poststart"]
+              "stages": ["poststart"]
             }
       - path: /etc/ocne/etcdnice.sh
         mode: 0555
